--- a/style.css
+++ b/style.css
@@ -16,3 +16,11 @@ button {
     font-size: 20px;
     max-width: fit-content;
 }
+
+.question {
+    font-size: 35px;
+}
+
+ul {
+    list-style: none;
+}
